--- a/AppTakeAway/app/src/main/AndroidManifest.xml
+++ b/AppTakeAway/app/src/main/AndroidManifest.xml
@@ -15,18 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <activity android:name=".CartActivity" />
+        <activity android:name=".MainActivity" />
+
+        <activity android:name=".InitialScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CartActivity" />
+
     </application>
 
 </manifest>
