--- a/AppTakeAway/app/src/main/AndroidManifest.xml
+++ b/AppTakeAway/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
 
         <activity android:name=".CartActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".SignInActivity" />
 
         <activity android:name=".InitialScreenActivity"
             android:exported="true">
