--- a/AppTakeAway/app/src/main/AndroidManifest.xml
+++ b/AppTakeAway/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CartActivity" />
+        <activity android:name=".PayActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
