--- a/AppTakeAway/app/src/main/AndroidManifest.xml
+++ b/AppTakeAway/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".OrderActivity" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
